added style to index.html
added style to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,6 +17,7 @@
         
     <!--Header section-->
     <header class="header">
+        <div class="container">
         <a href="#" class="header__logo"><p><span class="header__logo__name">Web</span>Studio</p></a>
    <nav class="header__navigation">
             <ul>
@@ -30,26 +32,30 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+1212-772-4150">+1 212-772-4150</a>
     </div>
+</div>
     </header>
 
 <!--Important part of the website-->
 <main>
     <!--Hero section-->
     <section class="hero-section">
+        <div class="container">
         <h1 class="hero-section__title">EFFECTIVE SOLUTIONS FOR<br > YOUR BUSINESS</h1>
-        <button class="header__requesting button" type="button">Request our service</button>
-    </section>
+        <button class="header__requesting button" type="button">Request our service</button>   
+</div>
+</section>
     
 
     <!--About section-->
     <section class="about">
+        <div class="container">
         <!--Descriptive information-->
         <div style="display: flex; gap: 30px">
             <!--details info-->
                 <div>
                 <ul class="about__list">
             <li>
-        <h5 class="about__subtittle">ATTENTION TO DETAILS</h5>
+        <h5 class="about__subtitle">ATTENTION TO DETAILS</h5>
         <p class="about__text">We go into all the details and processes
             of your business to develop a 
             customized solution.</p>
@@ -89,55 +95,61 @@
     </ul>
 </div>
 </div>
+</div>
 </section>
 <!--What we do section-->
 <section class="occupation">
     <h2 class="occupation__subtitle">What we do</h2>
     <div style="display: flex; gap: 30px">
-    <div><img src="./images/img-1.jpg"  alt="person working at pc" width="250" height="200">
-    <img src="./images/img-2.jpg"  alt="person working with mobile phone and pc" width="250" height="200">
-    <img src="./images/img-3.jpg"  alt="person using tablet" width="250" height="200">
+    <div class="occupation__images">
+        <img class="occupation__image"  src="./images/img-1.jpg"  alt="person working at pc" width="250" height="200">
+    <img class="occupation__image"  src="./images/img-2.jpg"  alt="person working with mobile phone and pc" width="250" height="200">
+    <img class="occupation__image" src="./images/img-3.jpg"  alt="person using tablet" width="250" height="200">
 </div>
 </div>
 </section>
 
 <!--Team section-->
 <section class="team">
+    <div class="container">
     <h2 class="team__subtitle">Our Team</h2>
     <!--container with members of the team-->
     <div style="display: flex; gap: 30px" >
         <!--1st container-->
-        <div><img src="./images/img-4.jpg" alt="photo of a happy man" width="150">
+        <div><img class="team__image" src="./images/img-4.jpg" alt="photo of a happy man" width="150">
         <p class="team__name"><b>Christopher Walker</b></p>
         <p class="team__job">Product Designer</p>
     </div>
     <!--2nd container-->
-    <div><img src="./images/img-5.jpg" alt="photo of a smiling woman" width="150">
+    <div><img class="team__image" src="./images/img-5.jpg" alt="photo of a smiling woman" width="150">
         <p class="team__name"><b>Kylie Evans</b></p>
         <p class="team__job">Frontend Developer</p>
     </div>
     <!--3rd container-->
-    <div><img src="./images/img-6.jpg" alt="photo of a smiling man" width="150">
+    <div><img class="team__image" src="./images/img-6.jpg" alt="photo of a smiling man" width="150">
         <p class="team__name"><b>Ryan Harris</b></p>
         <p class="team__job">Marketing</p>
     </div>
     <!--4th container-->
-    <div><img src="./images/img-7.jpg" alt="photo of a proud man" width="150">
+    <div><img class="team__image" src="./images/img-7.jpg" alt="photo of a proud man" width="150">
         <p class="team__name"><b>Tyler Moore</b></p>
         <p class="team__job">UI Designer</p>
     </div>
+</div>
 </div>
 </section>
 </main>
 
 <!--Footer section-->
     <footer class="footer">
+        <div class="container">
         <a href="#" class="footer__logo"><p><span class="footer__logo__name">Web</span>Studio</p></a>
         <address class="contact">
          Park Ave, NY 10065, USA <br>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
-            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+           <div class="contact-mail"> <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br></div>
+        <a href="tel:+1212-772-4150">+1 212-772-4150</a> 
         </address>
+</div>
     </footer>
 </body>
 </html>
