--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -14,6 +15,7 @@
 
         <!--Header section-->
         <header class="header">
+            <div class="container">
             <a href="#" class="header__logo"><p><span class="header__logo__name">Web</span>Studio</p></a>
             <nav class="header__navigation">
                 <ul>
@@ -28,16 +30,19 @@
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a href="tel:+1212-772-4150">+1 212-772-4150</a>
         </div>
+    </div>
         </header>
 
         <main>
         <!--Main part of the website page-->
+        <div class="projects">
+        <div class="container">
        <div class="projects__menu">
-        <button type="button">All</button>
-        <button type="button">Web-sites</button>
-        <button type="button">Apps</button>
-        <button type="button">Design</button>
-        <button type="button">Marketing</button>
+        <button type="button" class="name-all">All</button>
+        <button type="button" class="name-websites">Web-sites</button>
+        <button type="button" class="name-app">Apps</button>
+        <button type="button" class="name-design">Design</button>
+        <button type="button" class="name-marketing">Marketing</button>
        </div>
 
         <!--Projects section-->
@@ -46,74 +51,78 @@
             <div style="display: flex; gap: 30px">
 
             <!--1st container-->
-            <div class="projects__container"><img src="./images/technoduck.jpg" alt="photo of a web-site" width="300">
-                <p><b>Technoduck</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/technoduck.jpg" alt="photo of a web-site" width="300">
+                <p class="projects-text"><b>Technoduck</b></p>
                 <p>Web-site</p>
             </div>
 
             <!--2nd container-->
-            <div class="projects__container"><img src="./images/poster-new-orlean.jpg" alt="poster of 2 basketball player" width="300">
-                <p><b>Poster New Orlean vs Golden Star</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/poster-new-orlean.jpg" alt="poster of 2 basketball player" width="300">
+                <p class="projects-text"><b>Poster New Orlean vs Golden Star</b></p>
                 <p>Design</p>
             </div>
 
             <!--3rd container-->
-            <div class="projects__container"><img src="./images/seafood.jpg" alt="photo of seafood restaurant" width="300">
-                <p><b>Seafood Restaurant</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/seafood.jpg" alt="photo of seafood restaurant" width="300">
+                <p class="projects-text"><b>Seafood Restaurant</b></p>
                 <p>Apps</p>
             </div>
         </div>
 
         <div style="display: flex; gap: 30px">
         <!--4th container-->
-            <div class="projects__container"><img src="./images/project-prime.jpg" alt="photo of set of headphones" width="300">
-                <p><b>Project Prime</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/project-prime.jpg" alt="photo of set of headphones" width="300">
+                <p class="projects-text"><b>Project Prime</b></p>
                 <p>Marketing</p>
             </div>
 
             <!--5th container-->
-            <div class="projects__container"><img src="./images/project-boxes.jpg" alt="boxes image" width="300">
-                <p><b>Project Boxes</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/project-boxes.jpg" alt="boxes image" width="300">
+                <p class="projects-text"><b>Project Boxes</b></p>
                 <p>Apps</p>
             </div>
 
             <!--6th container-->
-            <div class="projects__container"><img src="./images/inspiration.jpg" alt="image website on pc" width="300">
-                <p><b>Inspiration has no Borders</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/inspiration.jpg" alt="image website on pc" width="300">
+                <p class="projects-text"><b>Inspiration has no Borders</b></p>
                 <p>Web-site</p>
             </div>
         </div>
 
             <div style="display: flex; gap: 30px">
             <!--7th container-->
-            <div class="projects__container"><img src="./images/limited-edition.jpg" alt="magazine design" width="300">
-                <p><b>Limited Edition</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/limited-edition.jpg" alt="magazine design" width="300">
+                <p class="projects-text"><b>Limited Edition</b></p>
                 <p>Design</p>
             </div>
 
             <!--8th container-->
-            <div class="projects__container"><img src="./images/project-lab.jpg" alt="tag image" width="300">
-                <p><b>Project LAB</b></p>
+            <div class="projects__container"><img class="projects__image" src="./images/project-lab.jpg" alt="tag image" width="300">
+                <p class="projects-text"><b>Project LAB</b></p>
                 <p>Marketing</p>
             </div>
 
             <!--9th container-->
-            <div class="projects__container"><img src="./images/growing.jpg" alt="picture with label" width="300">
-                <p><b>Growing Business</b></p>
-                <p>Apps</p>
+            <div class="projects__container"><img class="projects__image" src="./images/growing.jpg" alt="picture with label" width="300">
+                <p class="projects-text"><b>Growing Business</b></p>
+                <p class="projects1-text">Apps</p>
             </div>
             </div>
         </div>
+    </div>
+    </div>
     </main>
 
         <!--Footer section-->
         <footer class="footer">
+            <div class="container">
             <a href="#" class="footer__logo"><p><span class="footer__logo__name">Web</span>Studio</p></a>
             <address class="contact">
              Park Ave, NY 10065, USA <br>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
+             <div class="contact-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a> <br></div>
                 <a href="tel:+1212-772-4150">+1 212-772-4150</a>
             </address>
+          </div>
     </footer>
     
 </body>
