added styling to portfolio
added styling to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,19 +53,19 @@
             <!--1st container-->
             <div class="projects__container"><img class="projects__image" src="./images/technoduck.jpg" alt="photo of a web-site" width="300">
                 <p class="projects-text"><b>Technoduck</b></p>
-                <p>Web-site</p>
+                <p class="projects1-text">Web-site</p>
             </div>
 
             <!--2nd container-->
             <div class="projects__container"><img class="projects__image" src="./images/poster-new-orlean.jpg" alt="poster of 2 basketball player" width="300">
                 <p class="projects-text"><b>Poster New Orlean vs Golden Star</b></p>
-                <p>Design</p>
+                <p class="projects1-text">Design</p>
             </div>
 
             <!--3rd container-->
             <div class="projects__container"><img class="projects__image" src="./images/seafood.jpg" alt="photo of seafood restaurant" width="300">
                 <p class="projects-text"><b>Seafood Restaurant</b></p>
-                <p>Apps</p>
+                <p class="projects1-text">Apps</p>
             </div>
         </div>
 
@@ -73,19 +73,19 @@
         <!--4th container-->
             <div class="projects__container"><img class="projects__image" src="./images/project-prime.jpg" alt="photo of set of headphones" width="300">
                 <p class="projects-text"><b>Project Prime</b></p>
-                <p>Marketing</p>
+                <p class="projects1-text">Marketing</p>
             </div>
 
             <!--5th container-->
             <div class="projects__container"><img class="projects__image" src="./images/project-boxes.jpg" alt="boxes image" width="300">
                 <p class="projects-text"><b>Project Boxes</b></p>
-                <p>Apps</p>
+                <p class="projects1-text">Apps</p>
             </div>
 
             <!--6th container-->
             <div class="projects__container"><img class="projects__image" src="./images/inspiration.jpg" alt="image website on pc" width="300">
                 <p class="projects-text"><b>Inspiration has no Borders</b></p>
-                <p>Web-site</p>
+                <p class="projects1-text">Web-site</p>
             </div>
         </div>
 
@@ -93,13 +93,13 @@
             <!--7th container-->
             <div class="projects__container"><img class="projects__image" src="./images/limited-edition.jpg" alt="magazine design" width="300">
                 <p class="projects-text"><b>Limited Edition</b></p>
-                <p>Design</p>
+                <p class="projects1-text">Design</p>
             </div>
 
             <!--8th container-->
             <div class="projects__container"><img class="projects__image" src="./images/project-lab.jpg" alt="tag image" width="300">
                 <p class="projects-text"><b>Project LAB</b></p>
-                <p>Marketing</p>
+                <p class="projects1-text">Marketing</p>
             </div>
 
             <!--9th container-->
