corrected some mistakes

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,10 @@
 </head>
 <!--Body section-->
 <body class="body">
+    <div class="container">
 
         <!--Header section-->
         <header class="header">
-            <div class="container">
             <a href="#" class="header__logo"><p><span class="header__logo__name">Web</span>Studio</p></a>
             <nav class="header__navigation">
                 <ul>
@@ -30,27 +30,21 @@
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a href="tel:+1212-772-4150">+1 212-772-4150</a>
         </div>
-    </div>
         </header>
 
         <main>
         <!--Main part of the website page-->
-        <div class="projects">
-        <div class="container">
        <div class="projects__menu">
-        <button type="button" class="name-all">All</button>
-        <button type="button" class="name-websites">Web-sites</button>
-        <button type="button" class="name-app">Apps</button>
-        <button type="button" class="name-design">Design</button>
-        <button type="button" class="name-marketing">Marketing</button>
+        <button type="button" class="button-name">All</button>
+        <button type="button" class="button-name">Web-sites</button>
+        <button type="button" class="button-name">Apps</button>
+        <button type="button" class="button-name">Design</button>
+        <button type="button" class="button-name">Marketing</button>
        </div>
 
-        <!--Projects section-->
-        <div class="projects-section">
             <!--Container with projects-->
             <div style="display: flex; gap: 30px">
-
-            <!--1st container-->
+                <!--1st container-->
             <div class="projects__container"><img class="projects__image" src="./images/technoduck.jpg" alt="photo of a web-site" width="300">
                 <p class="projects-text"><b>Technoduck</b></p>
                 <p class="projects1-text">Web-site</p>
@@ -109,21 +103,19 @@
             </div>
             </div>
         </div>
-    </div>
-    </div>
     </main>
 
         <!--Footer section-->
         <footer class="footer">
-            <div class="container">
+            <div class="footer-info">
             <a href="#" class="footer__logo"><p><span class="footer__logo__name">Web</span>Studio</p></a>
-            <address class="contact">
-             Park Ave, NY 10065, USA <br>
-             <div class="contact-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a> <br></div>
-                <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+            <address class="contacts">
+            <p class="road">Park Ave, NY 10065, USA</p>
+            <p class="mail">info@devstudio.com</p>
+            <p class="phone">+1 212-772-4150</p>
             </address>
           </div>
     </footer>
-    
+</div>
 </body>
 </html>
