--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <!--Body section-->
     <body class="body">
+        <div class="container">
         
     <!--Header section-->
     <header class="header">
-        <div class="container">
         <a href="#" class="header__logo"><p><span class="header__logo__name">Web</span>Studio</p></a>
    <nav class="header__navigation">
             <ul>
@@ -31,7 +31,6 @@
         <div class="header__info">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+1212-772-4150">+1 212-772-4150</a>
-    </div>
 </div>
     </header>
 
@@ -48,11 +47,8 @@
 
     <!--About section-->
     <section class="about">
-        <div class="container">
-        <!--Descriptive information-->
         <div style="display: flex; gap: 30px">
             <!--details info-->
-                <div>
                 <ul class="about__list">
             <li>
         <h5 class="about__subtitle">ATTENTION TO DETAILS</h5>
@@ -61,9 +57,7 @@
             customized solution.</p>
         </li>
     </ul>
-</div>
 <!--Punctuality info-->
-    <div>
 <ul class="about__list">
     <li>
         <h5 class="about__subtitle">PUNCTUALITY</h5>
@@ -72,9 +66,8 @@
             respect your time and deadlines.</p>
             </li>
         </ul>
-    </div>
     <!--Planning info-->
-    <div>
+
 <ul class="about__list">
     <li>
             <h5 class="about__subtitle">PLANNING</h5>
@@ -83,9 +76,8 @@
                  implementation.</p>
 </li>
 </ul>
-</div>
+
 <!--technologies info-->
-<div>
 <ul class="about__list">
     <li>
         <h5 class="about__subtitle">MODERN TECHNOLOGIES</h5>
@@ -93,8 +85,6 @@
             It's time to simplify work processes.</p>
         </li>
     </ul>
-</div>
-</div>
 </div>
 </section>
 <!--What we do section-->
@@ -111,7 +101,6 @@
 
 <!--Team section-->
 <section class="team">
-    <div class="container">
     <h2 class="team__subtitle">Our Team</h2>
     <!--container with members of the team-->
     <div style="display: flex; gap: 30px" >
@@ -136,21 +125,21 @@
         <p class="team__job">UI Designer</p>
     </div>
 </div>
-</div>
 </section>
 </main>
 
 <!--Footer section-->
     <footer class="footer">
-        <div class="container">
+        <div class="footer-info">
         <a href="#" class="footer__logo"><p><span class="footer__logo__name">Web</span>Studio</p></a>
-        <address class="contact">
-         Park Ave, NY 10065, USA <br>
-           <div class="contact-mail"> <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br></div>
-        <a href="tel:+1212-772-4150">+1 212-772-4150</a> 
+        <address class="contacts">
+        <p class="road">Park Ave, NY 10065, USA</p>
+        <p class="mail">info@devstudio.com</p>
+        <p class="phone">+1 212-772-4150</p>
         </address>
 </div>
     </footer>
+</div>
 </body>
 </html>
 
