--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
 <main>
     <!--Hero section-->
     <section class="hero-section">
-        <div class="container">
+        <div class="section">
         <h1 class="hero-section__title">EFFECTIVE SOLUTIONS FOR<br > YOUR BUSINESS</h1>
         <button class="header__requesting button" type="button">Request our service</button>   
 </div>
@@ -46,81 +46,63 @@
     
 
     <!--About section-->
-    <section class="about">
-        <div style="display: flex; gap: 30px">
-            <!--details info-->
-                <ul class="about__list">
-            <li>
-        <h5 class="about__subtitle">ATTENTION TO DETAILS</h5>
-        <p class="about__text">We go into all the details and processes
-            of your business to develop a 
-            customized solution.</p>
+    <div class="section">
+    <section class="about-description">
+        
+        <!--details info-->
+        <ul class="about">
+            <li class="about-list"><h5 class="about__subtitle">ATTENTION TO DETAILS</h5>
+        <p class="about__text">We go into all the details and processes <br/> of your business to develop a <br/> customized solution.</p>
         </li>
-    </ul>
-<!--Punctuality info-->
-<ul class="about__list">
-    <li>
-        <h5 class="about__subtitle">PUNCTUALITY</h5>
-        <p class="about__text">With us, you can feel safe and secure. 
-            An important principle of the company: 
+        <li class="about-list"><h5 class="about__subtitle">PUNCTUALITY</h5>
+        <p class="about__text">With us, you can feel safe and secure. <br/> 
+            An important principle of the company: <br/>
             respect your time and deadlines.</p>
-            </li>
-        </ul>
-    <!--Planning info-->
-
-<ul class="about__list">
-    <li>
-            <h5 class="about__subtitle">PLANNING</h5>
-            <p class="about__text">You will be able to observe and participate
-                 in every phase of solution development and 
-                 implementation.</p>
-</li>
-</ul>
-
-<!--technologies info-->
-<ul class="about__list">
-    <li>
-        <h5 class="about__subtitle">MODERN TECHNOLOGIES</h5>
-         <p class="about__text">We use innovative tools to solve assigned tasks.
-            It's time to simplify work processes.</p>
+        </li>
+            <li class="about-list"><h5 class="about__subtitle">PLANNING</h5>
+            <p class="about__text">You will be able to observe and <br/> participate in every phase of solution <br/> development and implementation.</p>
+        </li>
+        <li class="about-list"><h5 class="about__subtitle">MODERN TECHNOLOGIES</h5>
+         <p class="about__text">We use innovative tools to solve <br/> assigned tasks.
+            It's time to simplify work <br/> processes.</p>
         </li>
     </ul>
-</div>
 </section>
+</div>
+
 <!--What we do section-->
 <section class="occupation">
+    <div class="section">
     <h2 class="occupation__subtitle">What we do</h2>
-    <div style="display: flex; gap: 30px">
     <div class="occupation__images">
-        <img class="occupation__image"  src="./images/img-1.jpg"  alt="person working at pc" width="250" height="200">
-    <img class="occupation__image"  src="./images/img-2.jpg"  alt="person working with mobile phone and pc" width="250" height="200">
-    <img class="occupation__image" src="./images/img-3.jpg"  alt="person using tablet" width="250" height="200">
+        <img class="occupation__image"  src="./images/img-1.jpg"  alt="person working at pc" width="370" height="294">
+    <img class="occupation__image"  src="./images/img-2.jpg"  alt="person working with mobile phone and pc" width="370" height="294">
+    <img class="occupation__image" src="./images/img-3.jpg"  alt="person using tablet" width="370" height="294">
 </div>
 </div>
 </section>
 
 <!--Team section-->
 <section class="team">
-    <h2 class="team__subtitle">Our Team</h2>
-    <!--container with members of the team-->
-    <div style="display: flex; gap: 30px" >
-        <!--1st container-->
-        <div><img class="team__image" src="./images/img-4.jpg" alt="photo of a happy man" width="150">
+    <div class="section">
+    <h2 class="team-subtitle">Our Team</h2>
+        <!--1st card-->
+        <div class="team-image"><img src="./images/img-4.jpg" alt="photo of a happy man" width="270" height="260">
         <p class="team__name"><b>Christopher Walker</b></p>
         <p class="team__job">Product Designer</p>
     </div>
-    <!--2nd container-->
-    <div><img class="team__image" src="./images/img-5.jpg" alt="photo of a smiling woman" width="150">
+    <!--2nd card-->
+    <div class="team-image"><img src="./images/img-5.jpg" alt="photo of a smiling woman" width="270" height="260">
         <p class="team__name"><b>Kylie Evans</b></p>
         <p class="team__job">Frontend Developer</p>
     </div>
-    <!--3rd container-->
-    <div><img class="team__image" src="./images/img-6.jpg" alt="photo of a smiling man" width="150">
+    <!--3rd card-->
+    <div class="team-image"><img src="./images/img-6.jpg" alt="photo of a smiling man" width="270" height="260">
         <p class="team__name"><b>Ryan Harris</b></p>
         <p class="team__job">Marketing</p>
     </div>
-    <!--4th container-->
-    <div><img class="team__image" src="./images/img-7.jpg" alt="photo of a proud man" width="150">
+    <!--4th card-->
+    <div class="team-image"><img src="./images/img-7.jpg" alt="photo of a proud man" width="270" height="260">
         <p class="team__name"><b>Tyler Moore</b></p>
         <p class="team__job">UI Designer</p>
     </div>
