--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         <!--details info-->
         <ul class="about">
             <li class="about-list"><h5 class="about__subtitle">ATTENTION TO DETAILS</h5>
-        <p class="about__text">We go into all the details and processes <br/> of your business to develop a <br/> customized solution.</p>
+        <p class="about__text">We go into all the details and processes <br> of your business to develop a <br> customized solution.</p>
         </li>
         <li class="about-list"><h5 class="about__subtitle">PUNCTUALITY</h5>
-        <p class="about__text">With us, you can feel safe and secure. <br/> 
-            An important principle of the company: <br/>
+        <p class="about__text">With us, you can feel safe and secure. <br> 
+            An important principle of the company: <br>
             respect your time and deadlines.</p>
         </li>
             <li class="about-list"><h5 class="about__subtitle">PLANNING</h5>
-            <p class="about__text">You will be able to observe and <br/> participate in every phase of solution <br/> development and implementation.</p>
+            <p class="about__text">You will be able to observe and <br> participate in every phase of solution <br> development and implementation.</p>
         </li>
         <li class="about-list"><h5 class="about__subtitle">MODERN TECHNOLOGIES</h5>
-         <p class="about__text">We use innovative tools to solve <br/> assigned tasks.
-            It's time to simplify work <br/> processes.</p>
+         <p class="about__text">We use innovative tools to solve <br> assigned tasks.
+            It's time to simplify work <br> processes.</p>
         </li>
     </ul>
 </section>
