--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,7 @@
         </header>
 
         <!--Main part of the website page-->
-        <main>
-            <div class="section">
+            <main class="section">
 
                 <!--Buttons list-->
             <div>
@@ -48,8 +47,7 @@
        </div>
 
             <!--Portfolio-->
-            <section class="portfolio-section">
-
+            <div class="portfolio-section">
                 <!--1st container-->
             <div class="portfolio-projects"><img class="portfolio-image" src="./images/technoduck.jpg" alt="photo of a web-site" width="370" height="294">
                 <div class="portfolio-cards">
@@ -59,7 +57,7 @@
         </div>
 
             <!--2nd container-->
-            <div class="portfolio-projects"><img class= "portfolio-image"src="./images/poster-new-orlean.jpg" alt="poster of 2 basketball player" width="370" height="294">
+            <div class="portfolio-projects"><img class= "portfolio-image" src="./images/poster-new-orlean.jpg" alt="poster of 2 basketball player" width="370" height="294">
                 <div class="portfolio-cards">
                 <p class="projects-text"><b>Poster New Orlean vs Golden Star</b></p>
                 <p class="projects1-text">Design</p>
@@ -121,8 +119,7 @@
                 <p class="projects1-text">Apps</p>
             </div>
             </div>
-            </div>
-        </section>
+    </div>
     </main>
 
         <!--Footer section-->
